<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CABAB4"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="17dp"
    android:paddingRight="10dp"
    android:paddingBottom="17dp">


    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F4F4"
        android:gravity="right"
        android:text="0"
        android:textColor="#100F0F"
        android:textSize="54sp"/>

    <LinearLayout
        android:id="@+id/line01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="#C6BDBD"
        android:orientation="horizontal"
        android:padding="0px">

        <Button
            android:id="@+id/btnClearAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:padding="0dp"
            android:text="@string/btnClearAll"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btnSqrt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#A39AA8"
            android:text="@string/btnSqrt"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btnDegree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#A39AA8"
            android:padding="0dp"
            android:text="@string/btnDegree"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#A39AA8"
            android:padding="0dp"
            android:text="@string/btnDiv"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:cornerRadius="@android:dimen/app_icon_size" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/line02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="#C6BDBD"
        android:orientation="horizontal"
        android:padding="0px">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btn7"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btn8"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btn9"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btnMulti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#A39AA8"
            android:padding="0dp"
            android:text="@string/btnMulti"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

    </LinearLayout> <LinearLayout
        android:id="@+id/line03"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="#C6BDBD"
        android:orientation="horizontal"
        android:padding="0px">

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/btn4"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/btn5"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/btn6"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="#A39AA8"
        android:padding="0dp"
        android:text="@string/btnMinus"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/line04"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="#C6BDBD"
        android:orientation="horizontal"
        android:padding="0px">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btn1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btn2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/btn3"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="#A39AA8"
            android:padding="0dp"
            android:text="@string/btnPlus"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="@android:dimen/app_icon_size" />

    </LinearLayout> <LinearLayout
        android:id="@+id/line05"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="#C6BDBD"
        android:orientation="horizontal"
        android:padding="0px">

    <Button
        android:id="@+id/btn0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/btn0"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/btnPoint"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btnClearLast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="#F44336"
        android:padding="0dp"
        android:text="@string/btnClearLast"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:backgroundTint="#5BDF60"
        android:padding="0dp"
        android:text="@string/btnEqual"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/app_icon_size" />

    </LinearLayout>
</LinearLayout>